--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/macandcheese.html">Mac and Cheese</a>
+    <img src="macandcheese.jpeg" alt="Macs">
     
 </body>
 </html>
