--- a/recipes/macandcheese.html
+++ b/recipes/macandcheese.html
@@ -10,6 +10,22 @@
     <h1>Mac and Cheese</h1>
     <img src="macandcheese.jpeg" alt="Macss">
     <h2>Description</h2>
-    
+    <p>This classic baked mac and cheese recipe with a buttered bread crumb topping is creamy and comforting.  It's easy to make the cheese sauce from scratch on your stovetop, starting with a roux and adding milk, Cheddar, and Parmesan, resulting in a rich, decadent sauce that coats every nook and cranny of the noodles. Serve this comfort-food macaroni and cheese casserole with grilled meats, sloppy Joes, fried chicken or alongside a salad for a meatless dinner.</p>
+<h3>Ingredients</h3>
+<ul>
+    <li>Macaroni</li>
+    <li>Butter & Flour</li>
+    <li>Milk</li>
+    <li>Cheese</li>
+    <li>Seasoning</li>
+    <li>Bread Crumbs</li>
+</ul>
+<h4>Steps</h4>
+<ol>
+    <li>Boil the Macoroni</li>
+    <li>Make the cheese sauce</li>
+    <li>Make the topping</li>
+    <li>Bake the mac and cheese</li>
+</ol>
 </body>
 </html>
