--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/macandcheese.html">Mac and Cheese</a>
+    <ul>
+   <li> <a  href="recipes/macandcheese.html">Mac and Cheese</li>></a>
+   <li><a href="recipes/brocolliCheeseCasserole.html">Brocolli Cheese Casserole</a></li>
    
-    
+   
+    </ul>
 </body>
 </html>
