--- a/recipes/macandcheese.html
+++ b/recipes/macandcheese.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Mac and Cheese</h1>
-    <img src="./recipeimages/macandcheese.jpeg" alt="Macss">
+    <img src="./recipeimages/macandcheese.jpeg" alt="Mac and cheese">
     <h2>Description</h2>
     <p>This classic baked mac and cheese recipe with a buttered bread crumb topping is creamy and comforting.  It's easy to make the cheese sauce from scratch on your stovetop, starting with a roux and adding milk, Cheddar, and Parmesan, resulting in a rich, decadent sauce that coats every nook and cranny of the noodles. Serve this comfort-food macaroni and cheese casserole with grilled meats, sloppy Joes, fried chicken or alongside a salad for a meatless dinner.</p>
 <h3>Ingredients</h3>
